# ChangeLog for net-firewall/shorewall-shell
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-firewall/shorewall-shell/Attic/ChangeLog,v 1.26 2009/03/20 13:30:58 ranger Exp $

  20 Mar 2009; Brent Baude <ranger@gentoo.org>
  shorewall-shell-4.0.15.ebuild:
  Marking shorewall-shell-4.0.15 ppc for bug 256064

  15 Mar 2009; Brent Baude <ranger@gentoo.org>
  shorewall-shell-4.0.15.ebuild:
  Marking shorewall-shell-4.0.15 ppc64 for bug 256064

  08 Mar 2009; Markus Meier <maekke@gentoo.org>
  shorewall-shell-4.0.15.ebuild:
  amd64/x86 stable, bug #256064

  28 Feb 2009; Peter Volkov <pva@gentoo.org> -shorewall-shell-4.0.12.ebuild,
  -shorewall-shell-4.0.13.ebuild, -shorewall-shell-4.0.13.1.ebuild,
  -shorewall-shell-4.0.14.1.ebuild, shorewall-shell-4.0.15.ebuild,
  -shorewall-shell-4.2.0.ebuild, -shorewall-shell-4.2.1.ebuild:
  Removed old, bug #256064. Fixed RDEPEND repoman warning.

*shorewall-shell-4.2.6 (22 Feb 2009)

  22 Feb 2009; Peter Volkov <pva@gentoo.org> +shorewall-shell-4.2.6.ebuild:
  Version bump, thank Vieri for this work #257895.

*shorewall-shell-4.2.4 (22 Jan 2009)
*shorewall-shell-4.0.15 (22 Jan 2009)

  22 Jan 2009; Peter Volkov <pva@gentoo.org> +shorewall-shell-4.0.15.ebuild,
  +shorewall-shell-4.2.4.ebuild:
  Version bump, bug #255437, thank Vieri for all work.

*shorewall-shell-4.2.1 (21 Nov 2008)
*shorewall-shell-4.0.14.1 (21 Nov 2008)

  21 Nov 2008; Peter Volkov <pva@gentoo.org>
  +shorewall-shell-4.0.14.1.ebuild, +shorewall-shell-4.2.1.ebuild:
  Version bump, bug #247669 and #247670, thank Vieri for maintenance.

*shorewall-shell-4.2.0 (30 Oct 2008)

  30 Oct 2008; Peter Volkov <pva@gentoo.org> +shorewall-shell-4.2.0.ebuild:
  Version bump, bug #240596, thank Vieri for all the work.

  05 Oct 2008; Peter Volkov <pva@gentoo.org> -shorewall-shell-4.0.3.ebuild,
  -shorewall-shell-4.0.8.ebuild, -shorewall-shell-4.0.9.ebuild,